práce na kapitole Navrh a konfigurace replikace, opravy chyb, překlepů

--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -99,6 +99,7 @@
     %------------------------------------------------------------------------- VÝSLEDKY
     \newpage
     \section{NÁVRH A KONFIGURACE REPLIKACE}
+      \input{kapitoly/konfigurace/0_konfigurace_uvod.tex}
       \input{kapitoly/konfigurace/1_navrh_replikacniho_reseni.tex}
       \input{kapitoly/konfigurace/2_priprava_prostredi_pro_konfiguraci.tex}
       \input{kapitoly/konfigurace/3_konfigurace_replikace.tex}
