--- a/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
+++ b/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
@@ -17,7 +17,7 @@
         udržován velkou komunitou nezávislých vývojářů. Používá licenci TPL
         (The PostgreSQL Licence), která je mírně odlišná od open-source licence
         BSD (Berkeley Distribution Software), ze které vychází
-        \citep{RiggsKrossing2010}
+        \citep{RiggsKrossing2010}.
 
         Řadí se mezi nejpokročilejší databáze díky schopnosti pracovat s
         velkými objemy dat, díky své rychlosti a funkcionalitě může soupeřit i
